# Hyperspectral-Imaging-Toolkit

./: .gitignore  AUDIT_BOTTLENECK_2026-06.md  AUDIT_SUMMARY.md  BENCHMARKING.md  BUG_FIXES.md  FIXES_APPLIED.md  MODEL_AUDIT_REPORT.md  README.md  benchmark_hsi.py  requirements-benchmark.txt
.claude/: settings.local.json
CSWIN v2/: .gitignore  AUDIT_FIXES_SUMMARY.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-06-15.md  AUDIT_REPORT_V2.md  MODEL_OPTIMIZATION_REPORT.md  QUICK_START.md  README.md  cswin_test_ntire.py  eval_mrae_variants.py  gpu_preflight_train.py  pyproject.toml  requirements.txt  smoke_infer.py  smoke_run.py  smoke_train.py
CSWIN v2/probes/: bench_audit_v2.py  probe_audit_v2.py
CSWIN v2/src/configs/: ablation_decoder_lite.yaml  ablation_stable_lite.yaml  ablation_stable_mrae.yaml  config.yaml  finetune_128_polish_annealed.yaml  finetune_progressive_annealed.yaml  sota_cascade.yaml
CSWIN v2/src/hsi_model/: __init__.py  constants.py  model.py  train_generator.py  train_optimized.py  training_script_fixed.py
CSWIN v2/src/hsi_model/models/: __init__.py  attention.py  discriminator.py  discriminator_v2.py  generator.py  generator_v3.py  losses.py  losses_consolidated.py  model.py
CSWIN v2/src/hsi_model/utils/: __init__.py  checkpoint.py  dataloader.py  inference.py  log_utils.py  logging.py  metrics.py  patch_inference.py  training_setup.py
CSWIN v2/src/hsi_model/utils/data/: __init__.py  arad_dataset.py  diagnostics.py  hf_arad_dataset.py  loaders.py  mst_dataset.py  transforms.py
CSWIN v2/tests/: test_ablation_configs.py  test_attention.py  test_audit_v2_fixes.py  test_checkpoint.py  test_cswin_test_ntire_tool.py  test_datasets.py  test_generator_early_stopping.py  test_gpu_preflight_train.py  test_hf_arad_dataset.py  test_inference.py  test_integration.py  test_losses.py  test_metrics.py  test_models.py  test_runtime_optimization.py  test_scheduler.py  test_sota_upgrades.py  test_training_setup.py
HSIFUSION&SHARP/: AUDIT_REPORT.md  AUDIT_REPORT_2026-06_pass3.md  README.md  common_utils_v32.py  dataset_setup.py  early_stopping.py  hsifusion_classifier_v253.py  hsifusion_training.py  hsifusion_v252_complete.py  optimized_dataloader.py  requirements.txt  sharp_config.ini  sharp_config_loader.py  sharp_inference.py  sharp_training_script_fixed.py  sharp_v322_hardened.py  smoke_infer.py  smoke_pipeline.py  smoke_train.py  test_audit_fixes.py  test_classifier_module.py  test_runtime_audit_regressions.py  test_sharp_scaling_ddp.py  train_job_HSI.sh  train_job_SHARP.sh
SSTrans/: .gitignore  AUDIT_REPORT_2026-06-12.md  README.md  pyproject.toml
SSTrans/configs/: ablation_no_rpe.json  corrected_rpe.json  optimized_candidate.json  recommended_retrain.json  rectangular_candidate.json  train_arad1k.json
SSTrans/scripts/: infer.py  inspect_arad.py  smoke_model.py  test_ntire.py  train.py
SSTrans/src/hsiformer/: __init__.py  _compat.py  attention.py  cat.py  checkpoint.py  cli.py  data.py  losses.py  metrics.py  model.py  ntire.py  presets.py  training.py
SSTrans/src/hsiformer/resources/: arad1k_test.txt  arad1k_train.txt  train_arad1k.json
SSTrans/tests/: test_attention.py  test_data.py  test_model.py  test_ntire.py  test_training.py
WaveDiff/: QUICK_START.md  README.md  demo.py  inference.py  requirements.txt  train.py
hsi_benchmark/: __init__.py  data.py  metrics.py  models.py  report.py
hsi_viz_suite/: MANIFEST.txt  README.md  pyrightconfig.json  (+1 more)
(+116 files in other folders)
