[project]
name = "cswin-v2-hsi-model"
version = "0.1.0"
description = "Noise-robust CSWin training pipelines for RGB-to-HSI reconstruction."
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "torchaudio>=0.12.0",
    "hydra-core>=1.3.0",
    "numpy>=1.21.0",
    "h5py>=3.7.0",
    "datasets>=2.19.0",
    "scipy>=1.9.0",
    "pillow>=9.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.64.0",
    "einops>=0.6.0",
    "packaging>=21.0",
    "opencv-python>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "black>=22.12.0",
    "flake8>=6.0.0",
    "mypy>=0.991",
]
logging = [
    "wandb>=0.13.0",
    "tensorboard>=2.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
disallow_untyped_defs = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Allow gradual typing adoption
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "scipy.*",
    "sklearn.*",
    "PIL.*",
    "cv2.*",
    "matplotlib.*",
    "seaborn.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
